<resources>
    <string name="app_name">FinalProject</string>

    <!-- One Worders -->
    <string name="add">Add</string>
    <string name="cancel">Cancel</string>
    <string name="day">Day</string>
    <string name="date">Date</string>
    <string name="save">Save</string>
    <string name="temperature">Temperature</string>
    <string name="time">Time</string>
    <string name="sunday">Sunday</string>
    <string name="monday">Monday</string>
    <string name="tuesday">Tuesday</string>
    <string name="wednesday">Wednesday</string>
    <string name="thursday">Thursday</string>
    <string name="friday">Friday</string>
    <string name="saturday">Saturday</string>
    <string name="and">\u0020and\u0020</string>
    <string name="loading">Loading</string>
    <string name="select">Select:</string>
    <string name="about">About</string>
    <string name="back">Back</string>
    <string name="undo">Undo</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="delete">Delete</string>
    <string name="ok">OK</string>


    <!-- Main Menu -->
    <string name="mainMenuTitle">Main Menu</string>
    <string name="buttonToFoodTracker">Food Tracker</string>
    <string name="buttonToActivityTracker">Activity Tracker</string>
    <string name="buttonToThermostat">Thermostat</string>
    <string name="buttonToAutomobile">Automobile</string>


    <!-- Food Tracker -->
    <string name="foodTrackerTitle">Food Tracker</string>
    <string name="FTBtnadd_new_food_item">Add New Food Item</string>
    <string name="FTEditTxtenter_name_of_new_food">Enter Name of new Food</string>
    <string name="food_tracker_welcome">WELCOME TO FOOD TRACKER</string>
    <string name="food_tracker_click_here_to_start">CLICK HERE TO START FOODTRACKER</string>
    <string name="food_tracker_splashscreen">splashscreen</string>
    <string name="food_tracker_fragLabel">FOOD TRACKER</string>
    <string name="food_tracker_food_itemLbl">FOOD ITEM:</string>
    <string name="food_tracker_caloriesLbl">CALORIES:</string>
    <string name="food_tracker_total_fatLbl">TOTAL FAT:</string>
    <string name="food_tracker_total_carbsLbl">TOTAL CARBS:</string>
    <string name="food_tracker_save">SAVE</string>
    <string name="food_tracker_update">UPDATE</string>
    <string name="food_tracker_delete">DELETE</string>
    <string name="food_tracker_menu_one">One</string>
    <string name="food_tracker_menu_two">Two</string>
    <string name="food_tracker_listTitle">FOODTRACKER LIST</string>
    <string name="food_tracker_add_a_new_food_item">ADD NEW ITEM</string>
    <string name="food_tracker_quit">QUIT</string>
    <string name="food_tracker_help">HELP</string>

    <string name="instructions">INSTRUCTIONS</string>
    <string name="here_goes_the_text">
        FOOD TRACKER\n
        This is a food tracker app. It keeps track of the calories, total carbs and total fat of individual food items.\n\n
        Click the I icon to view the version number and creator of this app.\n\n
        Click QUIT to return to the beginning of the app.\n
        Click ADD A NEW ITEM to add a new item to the Food Tracker List.This will bring you to a new page where you\n
        can enter all information for your new entry.  At this point you may click SAVE button which will refresh your \n
        list from the previous page.  You may also delete your entry by clicking the "Delete" button. \n\n
        If you click on one of your items, this will bring you to a page where all the information \n
        of this item is displayed.  At this point you may make changes to your data and click \n
        "Update" button to refresh your list with the new changes.\n




    </string>
    <string name="food_tracker_closebtnHelp">CLOSE</string>

    <!--    <string name="FTbtn_save">SAVE</string>
    <string name="FTbtn_Edit">EDIT</string>
    <string name="button">button_Enter</string>
    <string name="FTapple">APPLE</string>
    <string name="FTLabelAppletotal_fat">Total fat</string>
    <string name="FTAppleLabelcarbohydrate">Carbohydrate</string>
    <string name="FTBananaLabelcalories">Calories</string>
    <string name="FTBananaLabeltotal_fat">Total fat</string>
    <string name="FTBananaLabelcarbohydrate">Carbohydrate</string>
    <string name="FTbananaLabel">BANANA</string>
    <string name="FTBananaCalValue">95</string>
    <string name="FTBananaTotalFatValue">0g</string>
    <string name="FTBananaCarbValue">25g</string>
    <string name="FTAppleCalLabel">Calories</string>
    <string name="FTAppleCalValue">95</string>
    <string name="FTAppleTotalFatValue">0g</string>
    <string name="FTAppleCarbValue">25g</string> -->


    <!-- Activity Tracker -->
    <string name="activityTrackerTitle">Activity Tracker</string>
    <string name="activityHistoryTitle">Your activity history</string>
    <string name="activityAddTitle">Add a new activity</string>
    <string name="activityDetailTitle">Activity details</string>
    <string name="activityDateHint">Date</string>
    <string name="activityTimeHint">Time spent in minutes</string>
    <string name="activityActivityLabel">Activity</string>
    <string name="activityTime">Time</string>
    <string name="activityNotesTitle">Notes</string>
    <string name="activityNotesHint">ex: This felt easy</string>
    <string name="buttonAddActivity">Add new activity</string>
    <string name="buttonDeleteActivity">Delete</string>
    <string name="buttonEditActivity">Edit</string>
    <string name="buttonActivityHistory">View activity history</string>
    <string-array name="activitiesArray">
        <item>Running</item>
        <item>Walking</item>
        <item>Biking</item>
        <item>Swimming</item>
        <item>Skating</item>
    </string-array>
    <string name="dateToast">You must enter a date</string>
    <string name="addedSnack">Activity added</string>
    <string name="currentSummaryLabel">Time spent this month: </string>
    <string name="prevSummaryLabel">Time spent last month: </string>
    <string name="buttonSave">Save changes</string>
    <string name="activityEditTitle">Edit activity</string>
    <string name="editedSnack">Changes saved</string>
    <string name="currentTimeGood">. Way to go!</string>
    <string name="currentTimeBad">. Better get to work!</string>
    <string name="prevTimeGood">. Keep it up!</string>
    <string name="prevTimeBad">. Tsk tsk.</string>
    <string name="minutes">\u0020minutes</string>
    <string name="inputMissing">Input missing:\u0020</string>
    <string name="missingTime">time</string>
    <string name="missingNotes">notes</string>
    <string name="saveAnyway">\nSave anyway?</string>
    <string name="running">Running</string>
    <string name="walking">Walking</string>
    <string name="biking">Biking</string>
    <string name="swimming">Swimming</string>
    <string name="skating">Skating</string>
    <string name="activityTrackerAbout">
        Activity Tracker App\n\n
        Author: Catharina Kratzmann\n
        Version: 1.0\n\n
        Track your physical activity.\n\n
        <u>Instructions:</u>\n\n
        Click <b>View Activity History</b> to see your saved activities sorted by day.\n\n
        Click <b>Add New Activity</b> to create a new activity.\n\n
        From Activity History select a saved activity to view its details. Click <b>Edit</b> to change saved details or <b>Delete</b> to permanently remove activity from history.\n\n
        While in Edit or Add New Activity use the options to save one of 5 different activities. An activity must have a date saved, other details are optional.\n\n
        Clicking <b>Add</b> or <b>Save Changes</b> saves the activity to history. Clicking <b>Cancel</b> discards changes and returns to previous screen.
    </string>



    <!-- Thermostat -->
    <string name="thermostatAddTitle">Add Entry</string>
    <string name="thermostatEditTitle">Edit Entry</string>
    <string name="thermostatDeleteEntry">Delete Entry</string>
    <string name="thermostatEntriesTitle">Thermostat Entries</string>
    <string name="noEntriesFound">No entries found. Add one now?</string>
    <string name="entryAdded">Entry added!</string>
    <string name="entrySaved">Entry saved!</string>
    <string name="entryDeleted">Entry deleted!</string>
    <string name="undidDelete">Undid delete!</string>
    <string name="thermostatAbout">
        Thermostat App\n
        Produced by: Joel Janzen\n
        Version Number: 1.0\n\n
        This app tracks a schedule for a thermostat.\n\n
        Instructions\n
        Click Back in this window to return to the app.\n\n
        Click Add in the main window to add a new thermostat entry.\n
        This will bring you to the edit window.\n
        In the edit window, you can set the day, time, and temperature.\n
        Click Save in the edit window to save your new entry.\n\n
        Click an existing entry in the main window to edit it.\n
        This will bring you to the edit window.\n
        Click Save in the edit window to save your edits.\n
        Click Cancel in the edit window to cancel your edits.\n
        Click Delete in the edit window to delete this entry.\n
        </string>


    <!-- Automobile -->
    <string name="automobileTitle">Automobile</string>
    <string name="automobileEntriesTitle">Automobile Entries</string>
    <string name="carModel">Car Model</string>
    <string name="gas">Type of gas: </string>
    <string name="price">Gas Price: </string>
    <string name="liters">Liters Purchased: </string>
    <string name="avgKms">Average Kilometers: </string>
    <string name="savePurchase">Save Purchase</string>
    <string name="seeHistory">See History</string>
    <string name="inputType">Which Type of car?</string>
    <string name="inputGas">Which gas?</string>
    <string name="inputPrice">How much per liter?</string>
    <string name="inputLiters">How many liters?</string>
    <string name="inputAvgKm">Kilometers per Liter</string>
    <string name="automobileSnackbar">Gas Purchase Added</string>
    <string name="automobileToast">Gas Purchase Edited</string>
    <string name="automobileToast2">Gas Purchase Deleted</string>
    <string name="automobileAbout">
        \nGas Purchase App\n
        Produced by: Tomas Lozano\n\n
        Instructions:\n
        Click in the Add button to add a new Gas Purchase\n\n
        This will bring you to the save page\n
        Here you can save your new purchase by putting a date\n
        type of car, Gas type, Gas price and liters.\n
        This will show the average kilometers that you should\n
        be able to drive with this purchase\n\n
        Also when you return to the main page, you will see\n
        the date of each purchase. By clicking here you can edit\n
        this purchase, delete it or see the history your purchases\n
        depending on the filters that you apply.\n
    </string>


    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="dateToast">You must enter a date</string>
    <string name="addedSnack">Activity added</string>



    <string-array name="listOfCars">
        <item>Sedan</item>
        <item>Minivan</item>
        <item>Coupe</item>
        <item>Sports Car</item>
        <item>Hatchback</item>
        <item>Pickup Truck</item>
    </string-array>
</resources>
