<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="team.best.team.finalproject.AutomobilePurchase">

    <TextView
        android:id="@+id/carModelapp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/gasCar"
        android:layout_alignStart="@+id/gasCar"
        android:layout_marginBottom="20dp"
        android:text="@string/carModel" />

    <TextView
        android:id="@+id/gasCar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/gasPrice"
        android:layout_alignStart="@+id/gasPrice"
        android:layout_marginBottom="20dp"
        android:text="@string/gas" />

    <TextView
        android:id="@+id/gasPrice"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/liters"
        android:layout_alignStart="@+id/liters"
        android:layout_marginBottom="20dp"
        android:text="@string/price" />

    <TextView
        android:id="@+id/liters"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/avgkm"
        android:layout_alignStart="@+id/avgkm"
        android:layout_marginBottom="20dp"
        android:text="@string/liters" />

    <TextView
        android:id="@+id/avgkm"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/saveButton"
        android:layout_alignParentStart="true"
        android:layout_marginBottom="62dp"
        android:layout_marginStart="25dp"
        android:text="@string/avgKms" />

    <Button
        android:id="@+id/saveButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/seeHistory"
        android:layout_alignEnd="@+id/seeHistory"
        android:layout_marginBottom="11dp"
        android:text="@string/savePurchase" />

    <Button
        android:id="@+id/seeHistory"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentEnd="true"
        android:layout_marginBottom="91dp"
        android:layout_marginEnd="18dp"
        android:text="@string/seeHistory" />

    <EditText
        android:id="@+id/carDateText"
        android:layout_width="200dp"
        android:layout_height="40dp"
        android:textSize="14sp"
        android:inputType="date"
        android:hint="@string/date"
        android:layout_above="@+id/carText"
        android:layout_alignStart="@+id/carText"/>

    <EditText
        android:id="@+id/carText"
        android:drawSelectorOnTop="true"
        android:layout_width="200dp"
        android:layout_height="40dp"
        android:hint="@string/inputType"
        android:textSize="14sp"
        android:layout_above="@+id/gasText"
        android:layout_alignStart="@+id/gasText"
    />

    <EditText
        android:id="@+id/gasText"
        android:layout_width="200dp"
        android:layout_height="40dp"
        android:inputType="number"
        android:layout_alignBaseline="@+id/gasCar"
        android:layout_alignBottom="@+id/gasCar"
        android:layout_toEndOf="@+id/avgkm"
        android:hint="@string/inputGas"
        android:textSize="14sp" />

    <EditText
        android:id="@+id/priceText"
        android:layout_width="200dp"
        android:layout_height="40dp"
        android:inputType="number"
        android:layout_alignBaseline="@+id/gasPrice"
        android:layout_alignBottom="@+id/gasPrice"
        android:layout_toEndOf="@+id/avgkm"
        android:hint="@string/inputPrice"
        android:textSize="14sp" />

    <EditText
        android:id="@+id/litersText"
        android:layout_width="200dp"
        android:layout_height="40dp"
        android:inputType="number"
        android:layout_alignBaseline="@+id/liters"
        android:layout_alignBottom="@+id/liters"
        android:layout_toEndOf="@+id/avgkm"
        android:hint="@string/inputLiters"
        android:textSize="14sp" />

    <EditText
        android:id="@+id/avgKmsText"
        android:layout_width="200dp"
        android:layout_height="40dp"
        android:layout_alignBaseline="@+id/avgkm"
        android:layout_alignBottom="@+id/avgkm"
        android:layout_toEndOf="@+id/avgkm"
        android:hint="@string/inputAvgKm"
        android:focusable="false"
        android:clickable="false"
        android:textSize="14sp" />

    <Button
        android:id="@+id/deleteButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/delete"
        android:layout_marginBottom="30dp"
        android:layout_alignParentBottom="true"
        android:layout_alignEnd="@+id/saveButton" />

</RelativeLayout>
