<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/action_food"
        android:icon="@drawable/ic_food"
        android:orderInCategory="100"
        android:title="@string/buttonToFoodTracker"
        app:showAsAction="always" />

    <item
        android:id="@+id/action_activity"
        android:icon="@drawable/ic_exercise"
        android:orderInCategory="200"
        android:title="@string/buttonToActivityTracker"
        app:showAsAction="always" />

    <item
        android:id="@+id/action_thermostat"
        android:icon="@drawable/ic_temperature"
        android:orderInCategory="300"
        android:title="@string/buttonToThermostat"
        app:showAsAction="always" />

    <item
        android:id="@+id/action_automobile"
        android:icon="@drawable/ic_gas"
        android:orderInCategory="400"
        android:title="@string/buttonToAutomobile"
        app:showAsAction="always" />

</menu>