<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="team.best.team.finalproject.MainActivity">

    <TextView
        android:id="@+id/textMainMenuTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="40dp"
        android:text="@string/mainMenuTitle" />

    <Button
        android:id="@+id/buttonToFoodTracker"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textMainMenuTitle"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="40dp"
        android:text="@string/buttonToFoodTracker" />

    <Button
        android:id="@+id/buttonToActivityTracker"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/buttonToFoodTracker"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"
        android:text="@string/buttonToActivityTracker" />

    <Button
        android:id="@+id/buttonToThermostat"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/buttonToActivityTracker"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"
        android:text="@string/buttonToThermostat" />

    <Button
        android:id="@+id/buttonToAutomobile"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/buttonToThermostat"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"
        android:text="@string/buttonToAutomobile" />

</RelativeLayout>
