<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="team.best.team.finalproject.Automobile_about">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/about"
        android:layout_above="@+id/aboutText"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="36dp" />

    <TextView
        android:id="@+id/aboutText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/automobileAbout"
        android:layout_above="@+id/backButtonAuto"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="70dp" />

    <Button
        android:id="@+id/backButtonAuto"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/back"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="49dp" />

</RelativeLayout>
