<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="team.best.team.finalproject.ThermostatAbout">

    <TextView
        android:id="@+id/textThermostatAboutTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="40dp"
        android:text="@string/about" />

    <TextView
        android:id="@+id/textThermostatAbout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textThermostatAboutTitle"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"
        android:text="@string/thermostatAbout" />

    <Button
        android:id="@+id/buttonBackThermostat"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textThermostatAbout"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"
        android:text="@string/back" />

</RelativeLayout>
